# SwarmXQ

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHECKSUMS.sha256  CLAUDE.md  COPILOT-SETUP.md  INTEGRATION.md  MANIFEST.txt  MICRO-UTILITIES.md  Makefile  NEXUS.md  PRODUCTION_CLOSEOUT_AUDIT.md  README 2.md  README.md  SAFETY.md  SCAR-Cognitive-OS-vOmega-APEX-9.md  SYSTEM-PROMPT.md  conftest.py  docker-compose.yml  env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  swarm-audit.sh  swarm-config.sh  swarm-controller.sh  swarm-dashboard.sh  swarm-doctor.sh  swarm-evolve.sh  swarm-frameworks.sh  swarm-gate.sh  swarm-init.sh  swarm-inspect.sh  swarm-models.sh  swarm-plan.sh  swarm-run.sh  swarm-skills.sh  (+6 more)
.ai/: SETUP_AND_IMPLEMENTATION.md
.claude/: settings.json
.codex/: engineering-safety.rules
.github/: copilot-context.md  copilot-instructions.md
.serena/: project.yml
agents/: README.md  __init__.py  analyzer.py  backend-engineer.md  benchmark-analyst.md  catalog.yaml  chief-architect.md  context-researcher.md  data-engineer.md  design-critic.md  environment-governor.md  evaluator.md  evolver.md  executor.py  frontend-architect.md  incident-commander.md  mcp-toolsmith.md  memory-curator.md  perf-optimizer.md  performance-optimizer.md  producer.md  prompt-architect.md  qa-evaluator.md  release-manager.md  research-analyst.md  reviewer.md  risk-sentinel.md  security-auditor.md  security-reviewer.md  skill-curator.md  skill-librarian.md  strategist.md  subagent-coordinator.md  tournament-judge.md  video-planner.md  workflow-composer.md  workflow-router.md
brain/: AGENTS.md  README.md  __init__.py  dispatcher.py  graph.py  loop.py  memory.py  orchestrator.py  planner.py  rag.py  reflector.py  roles.py  router.py  scorer.py  utils.py
cli/: __init__.py  __main__.py  config.py  main.py  utils.py
configs/: brain.yaml  evolution.yaml  guardrails.yaml  mcp-defaults.yaml  routing.yaml  source-integration.yaml  swarmx.defaults.yaml  v6-overlay.yaml  video.defaults.yaml
core/: __init__.py
dashboard/: DEPRECATED.md  app.js  index.html  styles.css
dashboard-legacy/: DEPRECATED.md  README.md  app.js  index.html  styles.css
docs/: AGENT_CATALOG.md  BACKUP.md  CHANGELOG.md  CONFIG_REFERENCE.md  CORS_CONFIGURATION.md  CREATIVE_FACTORY_AUDIT_LEDGER.md  CREATIVE_FACTORY_RELEASE_STATUS.md  FRAMEWORK_MATRIX.md  INSTALL.md  MODELFILE-GUIDE.md  OPERATIONS.md  QUICKSTART.md  README.md  SETUP_AND_IMPLEMENTATION.md  SKILL_CATALOG.md  STARTUP_GUIDE.md  SWARMXQ-APEX17-UPGRADE.md  SwarmXQ_APEX_Video_Factory_V4_Production_Directive.md  SwarmXQ_Codex_Production_Closeout_Directive_V3.md  SwarmXQ_Creative_Video_Factory_Production_Directive.md  SwarmXQ_V4_Directive_Audit_Ledger.md  TIKTOK_SETUP.md  TROUBLESHOOTING.md  UPGRADE.md  V6.md  VIDEO-GENERATION.md  env.swarmx.example  kv_cache_reference.md
examples/: sample-project-context.yaml  sample_mcp.json  sample_run.sh
manifests/: swarmx_model_manifest.yaml
memory/: __init__.py  faiss_store.py  vector_store.py
models/: README.md  registry.yaml
orchestration/: orchestrator.py  requirements.txt  swarmx_config.yaml  tools.py
schemas/: message_schemas.json
scripts/: ci_phase1_check.sh  healthcheck.sh  install.sh  migrate-to-r7.sh  migrate.sh  rebuild-all-modelfiles.sh  startup-enhanced.sh  swarm-healthcheck-apex17.sh  validate_cli.sh  validate_v58.sh  verify-release.sh  verify.sh
setup/: env.swarmx  health_check.py  install.sh  ollama_env.sh  test_integration.py  zram_setup.sh
skills/: README.md  agentic-actions-auditor.md  architecture-improve.md  autonomy-ops.md  backend-architecture.md  baseline-capture.md  (+66 more)
(+496 files in other folders)
