[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmx"
version = "2026.6.0"
description = "AGI-style autonomous swarm control plane with bounded self-evolution"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "SwarmX Contributors", email = "swarmx@example.com"}]

# ── Core runtime dependencies ──────────────────────────────────────────────────
# All versions pinned with compatible-release (~=) or minimum-bound (>=) anchors.
# Never use bare package names — any pip install will silently pull breaking changes.
# Upgrade intentionally: bump version, run `make test`, then commit.
dependencies = [
  "PyYAML>=6.0.2",
  "rich>=13.7.1",
  "typer>=0.12.0",
  "textual>=0.61.0",
  "tqdm>=4.66.0",
  "pyfiglet>=1.0.2",
  "questionary>=2.0.1",
  # Structured JSON logging — used throughout orchestration/ and src/swarmx/
  "structlog>=24.1.0",
  # HTTP client — required by orchestration/orchestrator.py (OllamaClient),
  # src/swarmx/server.py (health probes), cli/commands/doctor.py,
  # and brain/router.py. NOT optional — every execution path needs it.
  "httpx>=0.27.0",
  # Async file I/O — required by orchestration/orchestrator.py TaskTrace.save()
  # and health log async writes. Promoted from orchestration/requirements.txt.
  "aiofiles>=24.1.0",
]


# ── Optional framework adapters ────────────────────────────────────────────────
[project.optional-dependencies]
openai    = ["openai-agents>=0.0.9"]
langgraph = ["langgraph>=0.2.0"]
crewai    = ["crewai>=1.8.0"]
autogen   = ["autogen-agentchat>=0.4.0"]
adk       = ["google-adk>=0.3.0"]
strands   = ["strands-agents>=0.1.0"]
mcp       = ["mcp>=1.0.0"]
# httpx is used by health-check helpers and the doctor command
http      = ["httpx>=0.27.0"]

# all: every optional adapter — used by the Docker image build
all = [
  "openai-agents>=0.0.9",
  "langgraph>=0.2.0",
  "crewai>=1.8.0",
  "autogen-agentchat>=0.4.0",
  "google-adk>=0.3.0",
  "strands-agents>=0.1.0",
  "mcp>=1.0.0",
  "httpx>=0.27.0",
]

# dev: testing and linting — never included in the Docker image
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
  "pytest-timeout>=2.3.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
swarm  = "swarmx.cli:main"
swarmx = "swarmx.cli:main"

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths        = ["tests"]
addopts          = "-q --tb=short"
python_files     = "test_*.py"
python_functions = "test_*"
# Prevent slow tests from hanging CI — individual tests override via @pytest.mark.timeout
timeout = 120

# ── Setuptools ─────────────────────────────────────────────────────────────────
[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff (linter + formatter) ──────────────────────────────────────────────────
[tool.ruff]
line-length    = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
  "E501",   # line length — handled by formatter
  "B008",   # function calls in default args (used deliberately in dataclasses)
  "UP006",  # use `type` instead of `Type` — keep 3.11 compat annotations
  "UP007",  # use `X | Y` — keep explicit Optional for clarity in public API
]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version       = "3.11"
warn_return_any      = true
warn_unused_ignores  = true
ignore_missing_imports = true
